--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "fetch": "^1.1.0",
+    "http-proxy-middleware": "^2.0.6",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.3.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.4",
