--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
